--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,11 +3,11 @@
 		<h2>Menu</h2>
 	</header>
 	<ul>
-		<li><a href="index.html">Homepage</a>
+		<li><a href="{{ site.url }}">Homepage</a>
 		</li>
-		<li><a href="generic.html">Generic</a>
+		<li><a href="{{ site.url }}/generic">Generic</a>
 		</li>
-		<li><a href="elements.html">Elements</a>
+		<li><a href="{{ site.url }}/elements">Elements</a>
 		</li>
 		<li>	<span class="opener">Submenu</span>
 			<ul>
