--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,3 +3,5 @@
 <script src="{{ site.url }}/assets/js/breakpoints.min.js"></script>
 <script src="{{ site.url }}/assets/js/util.js"></script>
 <script src="{{ site.url }}/assets/js/main.js"></script>
+<script src="{{ site.url }}/assets/js/simplejekyllsearch.js"></script>
+<script src="{{ site.url }}/assets/js/search.js"></script>
