--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,6 +9,6 @@
 SimpleJekyllSearch({
   searchInput: document.getElementById('search-input'),
   resultsContainer: document.getElementById('results-container'),
-  json: '{{ site.url }}/assets/js/search.json'
+  json: '{{ site.url }}/search.json'
 })
 </script>
