--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,5 +1,6 @@
-<section id="search" class="alt">
-	<form method="post" action="#">
-		<input type="text" name="query" id="query" placeholder="Search" />
+<section id="search menu" class="alt">
+	<form  id="search-container">
+		<input type="text"  id="search-input" name="query" placeholder="Search your city">
+		<ul class="alt" id="results-container"></ul>
 	</form>
 </section>
