--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 		<div id="sidebar">
 			<div class="inner">
 				<!-- Search -->
-				{% include search.html %}
+				{% include select.html %}
 				<!-- Menu -->
 				{% include nav.html %}
 				<!-- Recent -->
