--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,47 +1,11 @@
 <nav id="menu">
 	<header class="major">
-		<h2>Menu</h2>
+		<h2>Top Cities</h2>
 	</header>
 	<ul>
-		<li><a href="{{ site.url }}">Homepage</a>
-		</li>
-		<li><a href="{{ site.url }}/generic">Generic</a>
-		</li>
-		<li><a href="{{ site.url }}/elements">Elements</a>
-		</li>
-		<li>	<span class="opener">Submenu</span>
-			<ul>
-				<li><a href="#">Lorem Dolor</a>
-				</li>
-				<li><a href="#">Ipsum Adipiscing</a>
-				</li>
-				<li><a href="#">Tempus Magna</a>
-				</li>
-				<li><a href="#">Feugiat Veroeros</a>
-				</li>
-			</ul>
-		</li>
-		<li><a href="#">Etiam Dolore</a>
-		</li>
-		<li><a href="#">Adipiscing</a>
-		</li>
-		<li>	<span class="opener">Another Submenu</span>
-			<ul>
-				<li><a href="#">Lorem Dolor</a>
-				</li>
-				<li><a href="#">Ipsum Adipiscing</a>
-				</li>
-				<li><a href="#">Tempus Magna</a>
-				</li>
-				<li><a href="#">Feugiat Veroeros</a>
-				</li>
-			</ul>
-		</li>
-		<li><a href="#">Maximus Erat</a>
-		</li>
-		<li><a href="#">Sapien Mauris</a>
-		</li>
-		<li><a href="#">Amet Lacinia</a>
-		</li>
+		{% for city in site.data.cities %}
+			<li><a href="{{ site.url }}/{{ city.name }}">{{ city.title }}</a>
+			</li>
+		{% endfor %}
 	</ul>
 </nav>
