--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,15 @@
 <footer id="footer">
+	<ul class="icons">
+		<li><a href="{{ site.twitter }}" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+		</li>
+		<li><a href="{{ site.facebook }}" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+		</li>
+		<li><a href="{{ site.snapchat }}" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a>
+		</li>
+		<li><a href="{{ site.instagram }}" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+		</li>
+		<li><a href="{{ site.medium }}" class="icon brands fa-medium-m"><span class="label">Medium</span></a>
+		</li>
+	</ul>
 	<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 </footer>
