--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,8 +1,8 @@
 <section>
 	<header class="major">
-		<h2>Get in touch</h2>
+		<h2>Get In Touch</h2>
 	</header>
-	<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+	<p>Whether you’re interested in working with us, need an expert opinion - or just want to find out more about what we do, we’d love to hear from you.</p>
 	<ul class="contact">
 		<li class="icon solid fa-envelope"><a href="#">arigato.in@yahoo.com</a>
 		</li>
