--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,3 +9,14 @@
 		{% endfor %}
 	</ul>
 </nav>
+
+<nav id="menu">
+	<header class="major">
+		<h2>Menu</h2>
+	</header>
+	<ul>
+		<li><a href="{{ site.url }}/about">About Us</a></li>
+		<li><a href="https://medium.com/@arigato" target="_blank">Blog</a></li>
+		<li><a href="#">Become A Freelancer</a></li>
+	</ul>
+</nav>
