--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,5 +11,5 @@
 		<li><a href="{{ site.medium }}" class="icon brands fa-medium-m"><span class="label">Medium</span></a>
 		</li>
 	</ul>
-	<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+	<p class="copyright">&copy; 2020 Arigato India. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
 </footer>
