--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,6 +17,8 @@
 	<ul>
 		<li><a href="{{ site.url }}/about">About Us</a></li>
 		<li><a href="https://medium.com/@arigato" target="_blank">Blog</a></li>
-		<li><a href="#">Become A Freelancer</a></li>
+		<li><a href="{{ site.url }}/terms">terms</a></li>
+		<li><a href="{{ site.url }}/privacy">privacy</a></li>
+		<li><a href="{{ site.url }}/signup">Become A Freelancer</a></li>
 	</ul>
 </nav>
