--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
 	</header>
 	<p>Whether you’re interested in working with us, need an expert opinion - or just want to find out more about what we do, we’d love to hear from you.</p>
 	<ul class="contact">
-		<li class="icon solid fa-envelope"><a href="#">arigato.in@yahoo.com</a>
+		<li class="icon solid fa-envelope"><a href="mailto:arigato.in@yahoo.com">arigato.in@yahoo.com</a>
 		</li>
 		<li class="icon solid fa-home">Nagpur, Maharashtra</li>
 	</ul>
