--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,14 @@
 <footer id="footer">
 	<ul class="icons">
-		<li><a href="{{ site.twitter }}" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+		<li><a href="{{ site.twitter }}" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
 		</li>
-		<li><a href="{{ site.facebook }}" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+		<li><a href="{{ site.facebook }}" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
 		</li>
-		<li><a href="{{ site.snapchat }}" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a>
+		<li><a href="{{ site.snapchat }}" target="_blank" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a>
 		</li>
-		<li><a href="{{ site.instagram }}" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+		<li><a href="{{ site.instagram }}" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 		</li>
-		<li><a href="{{ site.medium }}" class="icon brands fa-medium-m"><span class="label">Medium</span></a>
+		<li><a href="{{ site.medium }}" target="_blank" class="icon brands fa-medium-m"><span class="label">Medium</span></a>
 		</li>
 	</ul>
 	<p class="copyright">&copy; 2020 Arigato India. Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a>.</p>
