--- a/_includes/select.html
+++ b/_includes/select.html
@@ -1,8 +1,5 @@
 <section id="search" class="alt">
-	<select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
-	    <option value="">Select your city</option>
-	    {% for city in site.data.cities %}
-	    <option value="{{ site.url }}/{{ city.name }}">{{ city.title }}, {{ city.state }}</option>
-	    {% endfor %}
-	</select>
+	<form method="post" action="#">
+		<input type="text" name="query" id="query" placeholder="Search">
+	</form>
 </section>
