--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 		  	</p>
 		</header>
 		<p>{{ page.bio }}</p>
-    		<p>{{ page.region }}</p>
+		<p><b>{{ page.region }}</b></p>
 		<ul class="actions">
 			<li><a href="{{ page.hire }}" class="button big">Hire</a>
 			</li>
