--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-  <a href="{{ site.url }}" class="logo"><strong>{{ site.name }}</strong> {{ site.region }}</a>
+  <a href="{{ site.baseurl }}" class="logo"><strong>{{ site.name }}</strong> {{ site.region }}</a>
 	<ul class="icons">
 		<li><a href="{{ site.twitter }}" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
 		</li>
