--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,6 +15,7 @@
 		<h2>Menu</h2>
 	</header>
 	<ul>
+		<li><a href="{{ site.url }}">Home</a></li>
 		<li><a href="{{ site.url }}/about">About Us</a></li>
 		<li><a href="https://medium.com/@arigato" target="_blank">Blog</a></li>
 		<li><a href="{{ site.url }}/terms">terms</a></li>
