--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,9 @@ layout: default
 		<header>
 			<h1>{{ page.title }}</h1>
       			<p>
-      			{% assign freelancer = site.freelancers | where: 'title', page.category | first %}
+      			{% assign freelancer = site.freelancers | where: 'name', page.category | first %}
 		  	{% if freelancer %}
-		    	<a href="{{ site.baseurl }}{{ freelancer.url }}">{{ freelancer.name }}</a>
+		    	<a href="{{ site.baseurl }}{{ freelancer.url }}">{{ freelancer.title }}</a>
 		  	{% endif %}
 		  	</p>
 		</header>
