--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -5,7 +5,7 @@ layout: default
 <!-- Section -->
 <section>
 	<header class="major">
-	<h1>{{ page.name }}s</h1>
+	<h1>{{ page.title }}s</h1>
     	</header>
 	<div class="posts">
   	{% assign freelancers = site.posts | where: 'category', page.name %}
