--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 	</header>
 	<ul>
 		{% for freelancer in site.freelancers %}
-			<li><a href="{{ site.baseurl }}{{ freelancer.url }}">{{ freelancer.name }}s</a>
+			<li><a href="{{ site.baseurl }}{{ freelancer.url }}">{{ freelancer.title }}s</a>
 			</li>
 		{% endfor %}
 	</ul>
