--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,4 +3,4 @@
 <script src="{{ site.url }}/assets/js/breakpoints.min.js"></script>
 <script src="{{ site.url }}/assets/js/util.js"></script>
 <script src="{{ site.url }}/assets/js/main.js"></script>
-
+<script src="https://unpkg.com/simple-jekyll-search/dest/simple-jekyll-search.min.js"></script>
