--- a/_includes/select.html
+++ b/_includes/select.html
@@ -1,5 +1,6 @@
 <section id="search" class="alt">
-	<form method="post" action="#">
-		<input type="text" name="query" id="query" placeholder="Search">
+	<form>
+		<input type="text" name="search" id="search-input" placeholder="Search">
+		<ul id="results-container" class="alt"></ul>
 	</form>
 </section>
