--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,9 @@ layout: default
 			</li>
 		</ul>
 	</div>	
+	{% if page.image %}
 	<span class="image object">
 		<img src="{{ page.image }}" alt="" />
 	</span>
+	{% endif %}
 </section>
