--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,22 @@ layout: default
 			<li><a href="{{ page.hire }}" class="button big">Hire</a>
 			</li>
 		</ul>
+		<ul class="icons">
+			<li><a href="{{ page.twitter }}" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+			</li>
+			<li><a href="{{ page.facebook }}" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+			</li>
+			<li><a href="{{ page.snapchat }}" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a>
+			</li>
+			<li><a href="{{ page.instagram }}" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+			</li>
+			<li><a href="{{ page.youtube }}" class="icon brands fa-youtube"><span class="label">Youtube</span></a>
+			</li>
+			<li><a href="{{ page.linkedin }}" class="icon brands fa-linkedin><span class="label">Medium</span></a>
+			</li>
+			<li><a href="{{ page.medium }}" class="icon brands fa-medium-m"><span class="label">Medium</span></a>
+			</li>
+		</ul>
 	</div>	
 	{% if page.image %}
 	<span class="image object">
