--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ layout: default
 			</li>
 			<li><a href="{{ page.youtube }}" class="icon brands fa-youtube"><span class="label">Youtube</span></a>
 			</li>
-			<li><a href="{{ page.linkedin }}" class="icon brands fa-linkedin><span class="label">Medium</span></a>
+			<li><a href="{{ page.linkedin }}" class="icon brands fa-linkedin><span class="label">Linkedin</span></a>
 			</li>
 			<li><a href="{{ page.medium }}" class="icon brands fa-medium-m"><span class="label">Medium</span></a>
 			</li>
