--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 	<head>
-		<title>{{ site.name }} {{ site.region }} - {{ page.title }}</title>
+		<title>{{ site.name }} {{ site.region }} - {% if page.layout == "archive" %}{{ page.title }}s{% elsif page.layout == "default" %}Find Freelancers Online{% else %}{{ page.title }}{% endif %}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" />
