--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -17,6 +17,4 @@
 	})();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-</noscript>{% endif %}</div>{% if page.image %}	<span class="image object">
-		<img src="{{ page.image }}" alt="" />
-	</span>
+</noscript>
