--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@ layout: default
 		{% if page.comments %}
 		{% include disqus.html %}
 		{% endif %}
-		
+	</div>
 		{% if page.image %}	
 		<span class="image object">
 		<img src="{{ page.image }}" alt="" />
