--- a/_includes/hyvor.html
+++ b/_includes/hyvor.html
@@ -18,3 +18,13 @@
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
 </noscript>
+
+<div id="hyvor-talk-view"></div>
+<script type="text/javascript">
+    var HYVOR_TALK_WEBSITE = 223; // DO NOT CHANGE THIS
+    var HYVOR_TALK_CONFIG = {
+        url: {{ page.url | absolute_url }},
+        id: {{ site.region }}
+    }
+</script>
+<script type="text/javascript" src="//talk.hyvor.com/web-api/embed"></script>
