--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,7 @@ layout: default
 			{% endif %}
 		</ul>
 		{% if page.comments %}
-		{% include disqus.html %}
+		{% include hyvor.html %}
 		{% endif %}
 	</div>
 		{% if page.image %}	
