--- a/_includes/hyvor.html
+++ b/_includes/hyvor.html
@@ -2,8 +2,8 @@
 <script type="text/javascript">
     var HYVOR_TALK_WEBSITE = 223; // DO NOT CHANGE THIS
     var HYVOR_TALK_CONFIG = {
-        url: {{ page.url | absolute_url }},
-        id: {{ site.region }}
+        url: "{{ page.url | absolute_url }}",
+        id: "{{ site.region }}"
     }
 </script>
 <script type="text/javascript" src="//talk.hyvor.com/web-api/embed"></script>
