--- a/_includes/hyvor.html
+++ b/_includes/hyvor.html
@@ -3,7 +3,7 @@
     var HYVOR_TALK_WEBSITE = 223; // DO NOT CHANGE THIS
     var HYVOR_TALK_CONFIG = {
         url: "{{ page.url | absolute_url }}",
-        id: "{{ site.region }}"
+        id: "{{ page.url | absolute_url }}"
     }
 </script>
 <script type="text/javascript" src="//talk.hyvor.com/web-api/embed"></script>
