--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,6 +50,7 @@ layout: default
 			</li>
 			{% endif %}
 		</ul>
+		{% include rating.html rating=page.rating %}
 	</div>
 		{% if page.image %}	
 		<span class="image object">
