--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,6 +17,7 @@
 	<ul>
 		<li><a href="{{ site.url }}">Home</a></li>
 		<li><a href="{{ site.url }}/about">About Us</a></li>
+		<li><a href="{{ site.url }}/help">Help</a></li>
 		<li><a href="https://medium.com/@arigato" target="_blank">Blog</a></li>
 		<li><a href="{{ site.url }}/terms">terms</a></li>
 		<li><a href="{{ site.url }}/privacy">privacy</a></li>
