--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,14 @@
 	<ul>
 		<li><a href="{{ site.url }}">Home</a></li>
 		<li><a href="{{ site.url }}/about">About Us</a></li>
-		<li><a href="{{ site.url }}/help">Help</a></li>
+		<li>
+			<span class="opener">Help</span>
+			<ul>
+				<li><a href="{{ site.url }}/help">Help Center</a></li>
+				<li><a href="{{ site.url }}/update">Update Your Profile</a></li>
+				<li><a href="{{ site.url }}/report">Report A Problem</a></li>
+			</ul>
+		</li>
 		<li><a href="https://medium.com/@arigato" target="_blank">Blog</a></li>
 		<li><a href="{{ site.url }}/terms">terms</a></li>
 		<li><a href="{{ site.url }}/privacy">privacy</a></li>
