--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav id="menu">
 	<header class="major">
 		<h2>Top Categories</h2>
 	</header>
@@ -17,17 +17,19 @@
 	<ul>
 		<li><a href="{{ site.url }}">Home</a></li>
 		<li><a href="{{ site.url }}/about">About Us</a></li>
-		<li>
-			<span class="opener">Help</span>
-			<ul>
-				<li><a href="{{ site.url }}/help">Help Center</a></li>
-				<li><a href="{{ site.url }}/update">Update Your Profile</a></li>
-				<li><a href="{{ site.url }}/report">Report A Problem</a></li>
-			</ul>
-		</li>
 		<li><a href="https://medium.com/@arigato" target="_blank">Blog</a></li>
 		<li><a href="{{ site.url }}/terms">terms</a></li>
 		<li><a href="{{ site.url }}/privacy">privacy</a></li>
 		<li><a href="{{ site.url }}/signup">Become A Freelancer</a></li>
+	</ul>
+</nav>
+
+<nav id="menu">
+	<header class="major">
+		<h2><li><a href="{{ site.url }}/help">Help Center</a></li></h2>
+	</header>
+	<ul>
+		<li><a href="{{ site.url }}/update">Update Your Profile</a></li>
+		<li><a href="{{ site.url }}/report">Report A Problem</a></li>
 	</ul>
 </nav>
