--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,9 +26,10 @@
 
 <nav id="menu">
 	<header class="major">
-		<h2><li><a href="{{ site.url }}/help">Help Center</a></li></h2>
+		<h2>Help</h2>
 	</header>
 	<ul>
+		<li><a href="{{ site.url }}/help">Help Center</a></li>
 		<li><a href="{{ site.url }}/update">Update Your Profile</a></li>
 		<li><a href="{{ site.url }}/report">Report A Problem</a></li>
 	</ul>
