--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,7 +29,7 @@
 		<h2>Help</h2>
 	</header>
 	<ul>
-		<li><a href="{{ site.baseurl }}/help">Help Center</a></li>
+		<li><a href="{{ site.url }}/help">Help Center</a></li>
 		<li><a href="{{ site.baseurl }}/update">Update Your Profile</a></li>
 		<li><a href="{{ site.baseurl }}/report">Report A Problem</a></li>
 	</ul>
