--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,5 +2,6 @@
 		<title>{{ site.name }} {{ site.region }} - {% if page.layout == "archive" %}{{ page.title }}s{% else %}{{ page.title }}{% endif %}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Hire expert freelancers for any job">
 		<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" />
 	</head>
